schema change and revert configs